@@ -1,14 +1,17 @@
 package com.gaumji.tests;
 
 import com.gaumji.listener.TestListener;
+import com.gaumji.util.AllureEnvironmentWriter;
 import com.gaumji.util.Config;
 import com.gaumji.util.Constants;
 import com.google.common.util.concurrent.Uninterruptibles;
+import io.github.bonigarcia.wdm.WebDriverManager;
 import org.openqa.selenium.Capabilities;
 import org.openqa.selenium.Dimension;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.chrome.ChromeDriver;
 import org.openqa.selenium.chrome.ChromeOptions;
+import org.openqa.selenium.firefox.FirefoxDriver;
 import org.openqa.selenium.firefox.FirefoxOptions;
 import org.openqa.selenium.remote.RemoteWebDriver;
 import org.slf4j.Logger;
@@ -18,7 +21,6 @@ import org.testng.annotations.*;
 
 import java.net.MalformedURLException;
 import java.net.URI;
-import java.net.URL;
 import java.time.Duration;
 
 @Listeners({TestListener.class})
@@ -28,55 +30,80 @@ public abstract class AbstractTest {
     private static final Logger log = LoggerFactory.getLogger(AbstractTest.class);
 
     @BeforeSuite
-    public void setUpConfiguration(){
+    public void setUpConfiguration() {
         Config.initialize();
     }
 
     @BeforeTest
     public void setDriver(ITestContext ctx) throws MalformedURLException {
-//        if(Boolean.parseBoolean(Config.get(Constants.GRID_ENABLED))){
-//            if(Boolean.getBoolean("selenium.grid.enabled")){
-//                this.driver = getRemoteDriver();
-//            }else{
-//                this.driver = getLocalDriver();
-//            }
-//        }
-        //instead of using above lengthy process, we can use ternary operator
-        this.driver = Boolean.parseBoolean(Config.get(Constants.GRID_ENABLED)) ? getRemoteDriver() : getLocalDriver();
+        boolean isRemote = Boolean.parseBoolean(Config.get(Constants.GRID_ENABLED));
+        String browser = ctx.getCurrentXmlTest().getParameter("browser");
+        if (browser == null) {
+            browser = Config.get(Constants.BROWSER);
+        }
+
+        log.info("🔧 Driver mode: {}", isRemote ? "Remote Grid" : "Local");
+        log.info("🌐 Browser selected: {}", browser);
+
+        this.driver = isRemote ? getRemoteDriver(browser) : getLocalDriver(browser);
         ctx.setAttribute(Constants.DRIVER, this.driver);
+
+        if (this.driver instanceof RemoteWebDriver remoteDriver) {
+            AllureEnvironmentWriter.writeEnvironmentInfo(remoteDriver);
+            AllureEnvironmentWriter.addBrowserLabel(remoteDriver);
+        }
     }
 
-    private WebDriver getRemoteDriver() throws MalformedURLException {
-        Capabilities capabilities = new ChromeOptions();
-        if(Constants.FIREFOX.equalsIgnoreCase(Config.get(Constants.BROWSER))){
-            capabilities = new FirefoxOptions();
+    protected WebDriver getRemoteDriver(String browser) throws MalformedURLException {
+        Capabilities capabilities;
+
+        if (browser.equalsIgnoreCase(Constants.FIREFOX)) {
+            FirefoxOptions firefoxOptions = new FirefoxOptions();
+            capabilities = firefoxOptions;
+        } else {
+            ChromeOptions chromeOptions = new ChromeOptions();
+            chromeOptions.addArguments("--disable-dev-shm-usage");
+            chromeOptions.addArguments("--no-sandbox");
+            chromeOptions.addArguments("--headless=new"); // Optional: if you don’t need UI
+            capabilities = chromeOptions;
         }
+
         String urlFormat = Config.get(Constants.GRID_URL_FORMAT);
         String hubHost = Config.get(Constants.GRID_HUB_HOST);
         String url = String.format(urlFormat, hubHost);
-        log.info("grid url: {}",url);
-//        return new RemoteWebDriver(new URL(url), capabilities); //'URL(java.lang.String)' is deprecated since version 20
-        return new RemoteWebDriver(
-                URI.create(url).toURL(),  // Correct conversion
-                capabilities
-        );
+
+        log.info("🔗 Running in remote mode with URL: {}", url);
+        log.info("🚀 Launching remote browser: {}", browser);
+
+        return new RemoteWebDriver(URI.create(url).toURL(), capabilities);
     }
 
-    private WebDriver getLocalDriver(){
-        this.driver = new ChromeDriver();
-        driver.manage().window().setSize(new Dimension(1920, 1080));
-        return this.driver;
+    protected WebDriver getLocalDriver(String browser) {
+        log.info("💻 Running in local mode. Browser: {}", browser);
+
+        WebDriver localDriver;
+        if (browser.equalsIgnoreCase(Constants.FIREFOX)) {
+            WebDriverManager.firefoxdriver().setup();
+            localDriver = new FirefoxDriver();
+        } else {
+            WebDriverManager.chromedriver().setup();
+            localDriver = new ChromeDriver();
+        }
+
+        localDriver.manage().window().setSize(new Dimension(1920, 1080));
+        return localDriver;
     }
 
     @AfterTest
     public void tearDown() {
-        this.driver.quit();
+        if (this.driver != null) {
+            log.info("🧹 Quitting browser session.");
+            this.driver.quit();
+        }
     }
 
-//    use below method, if you wish to watch the test execution video VNC in docker vms, else comment this
-//    @AfterMethod
-    public void sleep(){
+    @AfterMethod(enabled = false)
+    public void sleep() {
         Uninterruptibles.sleepUninterruptibly(Duration.ofSeconds(5));
     }
-
 }
